--- a/styles/views/challenges.styl
+++ b/styles/views/challenges.styl
@@ -192,6 +192,7 @@
                         smooth-font(false)
                         font-weight normal
                         font-style normal
+                        margin-left 5px
 
                     &:after
                         icon()
