--- a/views/playground.jade
+++ b/views/playground.jade
@@ -21,3 +21,5 @@ include ./partial/header
                 workspace,
                 mode='"playground"'
                 )
+
+include partial/dialogs
